[project]
name = "webtoon-comprehension-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "aioboto3>=14.1.0",
    "aiohttp>=3.11.16",
    "graspologic>=3.4.1",
    "hnswlib>=0.8.0",
    "langchain==0.1.11",
    "langchain-google-genai>=1.0.4",
    "langchain-openai==0.0.8",
    "langgraph==0.0.26",
    "nano-vectordb>=0.0.4.3",
    "neo4j>=5.28.1",
    "networkx>=3.4.2",
    "ollama>=0.4.7",
    "openai>=1.70.0",
    "oracledb>=3.1.0",
    "pillow==10.2.0",
    "psycopg[binary,pool]>=3.2.6",
    "pymilvus>=2.5.6",
    "pymongo>=4.11.3",
    "pymysql>=1.1.1",
    "python-dotenv==1.0.1",
    "pyvis>=0.3.2",
    "sqlalchemy>=2.0.40",
    "streamlit==1.32.2",
    "tenacity>=8.5.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
    "xxhash>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true